# finalproject_Nosulchak_dpo_nod

./: .gitignore  README.md  demo.cast  main.py  new_demo.cast  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/: decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py
valutatrade_hub/infra/: settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
