[tool.poetry]
name = "valutatrade-hub"
version = "0.1.0"
description = "ValutaTrade Hub — учебный CLI-проект для торговли валютами с логированием и API-курсами."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
prettytable = "^3.10.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



